# seamat

./: .gitignore  CMakeLists.txt  README.md
config/: seamat_openmp_config.hpp.in
include/: DenseMatrix.hpp  IndexMatrix.hpp  Matrix.hpp  SparseIndexMatrix.hpp  SparseIntegerTypeMatrix.hpp  SparseMatrix.hpp  math_util.hpp  seamat_openmp_config.hpp.in
src/: DenseMatrix.cpp  IndexMatrix.cpp  Matrix.cpp  SparseIndexMatrix.cpp  SparseIntegerTypeMatrix.cpp  SparseMatrix.cpp  test.cpp
test/include/: DenseMatrix_unittest.hpp  IndexMatrix_unittest.hpp  Matrix_unittest.hpp  SparseIntegerTypeMatrix_unittest.hpp  SparseMatrix_unittest.hpp
test/src/: DenseMatrix_unittest.cpp  IndexMatrix_unittest.cpp  Matrix_unittest.cpp  SparseIntegerTypeMatrix_unittest.cpp  SparseMatrix_unittest.cpp
